# skin_detector

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: control.h  imageviewer.h  mixture.h  mog.h  viewer.h
src/: control.cpp  imageviewer.cpp  main.cpp  mixture.cpp  mog.cpp  mog_io.cpp  mog_test.cpp  mog_train.cpp  viewer.cpp  viewer_error.cpp  viewer_keyio.cpp  viewer_visualizer.cpp
ui/: control.ui  imageviewer.ui
